# unsnap

./: .gitignore  Cargo.toml  README.md  bot.toml.example
src/: comms.rs  config.rs  errors.rs  files.rs  main.rs  parse.rs  webs.rs
src/content/: dash.rs
src/danger/: mod.rs  qalc.rs
src/titles/: html.rs  imgur.rs  mod.rs  reddit.rs  spotify.rs  twitter.rs  youtube.rs
tests/: DASHPlaylist.mpd  bbc.html  spotify-null.json  spotify-track.json  streeteasy.html  twitter-docsample.json  twitter-multiline.json  youtube-aiweechoo.json
