[package]
name = "unsnap"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

edition = "2018"

[dependencies]
async-trait = "0.1"
cast = "0.2"
chrono = "0.4"
failure = "0.1"
futures = "0.3"
htmlescape = "0.3"
iowrap = "0.2"
irc = "0.14"
lazy_static = "1"
log = "0.4"
maplit = "1"
number_prefix = "0.3"
pretty_env_logger = "0.3"
quick-xml = "0.18"
regex = "1"
result = "1"
reqwest = { version = "0.10", features = ["json"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
subprocess = "0.2"
tempfile = "3"
time-parse = "0.1"
tokio = "0.2"
toml = "0.5"
twoway = "0.2"
url = "2"
