[package]
name = "unsnap"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

edition = "2018"

[dependencies]
anyhow = "1"
cast = "0.2"
chrono = "0.4"
futures = "0.3"
htmlescape = "0.3"
irc = "0.14"
itertools = "0.9"
lazy_static = "1"
log = "0.4"
maplit = "1"
number_prefix = "0.3"
pretty_env_logger = "0.3"
quick-xml = "0.18"
regex = "1"
reqwest = { version = "0.10", features = ["json"] }
result = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
subprocess = "0.2"
tempfile = "3"
time-parse = "0.2"
tokio = "0.2"
toml = "0.5"
twoway = "0.2"
url = "2"
